# rust_ml_toolkit

./: Cargo.toml  README.md
doc/: backprop.tex
examples/: adder.rs  gates.rs
save/: adder  xor
src/: lib.rs  main.rs
src/adapter/: context.rs  data.rs  learner.rs  mod.rs  nodes.rs  session.rs
src/adapter/img/: png.rs
src/core/: mod.rs
src/core/common/: mod.rs
src/core/matrix/: matrix.rs
src/core/nn/: cost.rs  dataset.rs  mod.rs  nn.rs
src/manager/: manager.rs  memo.txt  mod.rs
src/manager/ui/: frame.rs  gradient.rs  mod.rs  visualize.rs
src/manager/ui/controller/: control.rs  create_dataset.rs  create_model.rs  dataset.rs  mod.rs  model.rs  session.rs
src/manager/ui/viewer/: costs.rs  mod.rs  nodes.rs
src/matrix/: matrix.rs  mod.rs  sigmoid.rs
src/nn/: nn.rs
src/visualizer/: frame.rs  gradient.rs  manager.rs  mod.rs  visualize.rs
