[package]
name = "ml_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui_plot = "0.23.0"
env_logger = "0.10.0"
log = "0.4.20"
png = "0.17.11"
rand = "0.8.5"
serde = "1.0.192"
serde_json = "1.0"
